cargo-features = ["resolver"]

[workspace]
members = [
   'pallets/*',
    'runtime/*',
    'node/*',
]

resolver = "2"
[profile.release]

# Sunrise runtime requires unwinding.
panic = "unwind"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
aes-soft = { opt-level = 3 }
aesni = { opt-level = 3 }
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crossbeam-queue = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
h2 = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[patch.crates-io]
evm = { git = "https://github.com/AcalaNetwork/evm.git", branch = "sw/bump-dependencies" }
evm-core = { git = "https://github.com/AcalaNetwork/evm.git", branch = "sw/bump-dependencies" }
evm-gasometer = { git = "https://github.com/AcalaNetwork/evm.git", branch = "sw/bump-dependencies" }
evm-runtime = { git = "https://github.com/AcalaNetwork/evm.git", branch = "sw/bump-dependencies" }
ethereum = { git = "https://github.com/rust-blockchain/ethereum.git" }

## TODO - add patches for the following
## cargo update && cargo update -p schnorrkel:0.9.2 --precise 0.9.1 && cargo update -p funty --precise 1.1.0

## [patch.'https://github.com/example/baz']
## baz = { git = 'https://github.com/example/patched-baz', branch = 'my-branch' }

[patch."https://github.com/paritytech/substrate"]
## From runtime/common/Cargo.toml
sp-std = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-core = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-runtime = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
frame-support = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
frame-system = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
pallet-scheduler = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}

## from runtime/dawn/cargo.toml
frame-benchmarking = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
frame-executive = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
# frame-support = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
# frame-system = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
frame-system-rpc-runtime-api = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}

pallet-aura = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
pallet-balances = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
pallet-randomness-collective-flip = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
pallet-sudo = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
pallet-timestamp = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"} 
pallet-transaction-payment = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
pallet-transaction-payment-rpc-runtime-api = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}

sp-api = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-application-crypto = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-block-builder = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-consensus-aura = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
# sp-core = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-inherents = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-io = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-offchain = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
# sp-runtime = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-session = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-staking = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
# sp-std = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-transaction-pool = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}
sp-version = {git = "https://github.com/sunriseprotocol/substrate", branch = "sunrise-evm"}



[patch."https://github.com/paritytech/polkadot"]
## from runtime/dawn/cargo.toml
parachain-info = {git = "https://github.com/sunriseprotocol/polkadot", branch = "sunrise-evm"}
polkadot-parachain = {git = "https://github.com/sunriseprotocol/polkadot", branch = "sunrise-evm"}
xcm = {git = "https://github.com/sunriseprotocol/polkadot", branch = "sunrise-evm"}
xcm-executor = {git = "https://github.com/sunriseprotocol/polkadot", branch = "sunrise-evm"}
xcm-builder = {git = "https://github.com/sunriseprotocol/polkadot", branch = "sunrise-evm"}

[patch."https://github.com/paritytech/cumulus"]

## from runtime/dawn/cargo.toml
cumulus-primitives-core = {git = "https://github.com/sunriseprotocol/cumulus", branch = 'sunrise-evm'} 
cumulus-pallet-parachain-system = {git = "https://github.com/sunriseprotocol/cumulus", branch = 'sunrise-evm'}
cumulus-pallet-xcm-handler = {git = "https://github.com/sunriseprotocol/cumulus", branch = 'sunrise-evm'}
