[package]
name = "srs-primitives"
version = "0.1.0"
authors = ["Sunrise Protocol"]
edition = "2018"

[dependencies]
bstringify = "0.1.2"
serde = { optional = true, version = '1.0.101' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1", default-features = false }
evm = { version = "0.24.0", default-features = false, features = ["with-codec"] }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
serde_json = { version = "1.0.61" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"evm/std",
	"evm/with-serde",
]
